--- a/curriculo.html
+++ b/curriculo.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Meu currículo</h1>
-    Nome: Vanessa Witczak.
+    <p>Nome: <strong>Vanessa Witczak</strong<p>
     <p>Grande amiga de Cleópatra, discípula de Jean-Jacques Rousseau, influenciada pela filosofia iluminista de Rousseau, lutou ao lado dos franceses na Revolução Francesa.Estudou muitas coisas ao longo dos anos, atualmente estudante de programação, e ja vencendo o maior desafio da programacão: fazendo o site aparecer corretamente no navegador. </p>
 </body>
     <h2>Contatos;</h2>
